# CollabCursor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/collabcursor/: app.py
